[package]
name = "graphite"
description = "The knowledge graph editor"
version = "0.1.0"
edition = "2021"


[dependencies]
iced = { version = "0.12.1", features = ["debug"] }
rusqlite = { version = "0.32.1", features = ["uuid"] }
tokio = { version = "1.40.0", features = ["fs"] }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.83"
time = "0.3.36"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
uuid = { version = "1.10.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
